--- a/sub/public/html/workouts.html
+++ b/sub/public/html/workouts.html
@@ -18,19 +18,20 @@
     <fieldset>
       <legend>Add a Workout</legend>
       <label for="name" id="exercise">Exercise Name:</label>
-      <input type="text" name="name" id="name">
+      <input type="text" name="name" id="name" required>
       
       <label for="reps">Repetitions:</label>
-      <input type="number" name="reps" id="reps"> 
+      <input type="number" name="reps" id="reps" required> 
 
       <label for="weight">Weight:</label>
-      <input type="number" name="weight" id="weight"> 
+      <input type="number" name="weight" id="weight" required> 
 
       <label for="date">Date:</label>
-      <input type="date" name="date" id="date">
+      <input type="date" name="date" id="date" required>
 
-      <input type="radio" name="unit" id="lbs" value="lbs" checked="checked"/>Pounds
-      <input type="radio" name="unit" id="lbs" value="kilo" />Kilograms
+    <label for="unit">Unit:</label>
+      <input type="radio" name="unit" id="unit" value="lbs" />Pounds
+      <input type="radio" name="unit" id="unit" value="kilos" />Kilograms
 
       <input type="submit" id="newWorkout">
     </fieldset>
