--- a/sub/public/html/workouts.html
+++ b/sub/public/html/workouts.html
@@ -7,49 +7,62 @@
   <meta charset="UTF-8">
   <title>List of Workouts</title>
   <!-- css style sheet -->
-  <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <link rel="stylesheet" href="/public/css/style.css" type="text/css">
   <!--boot strap sheet-->
-  <link rel="stylesheet" href="../css/lavish-bootstrap.css">
+  <link rel="stylesheet" href="/public/css/lavish-bootstrap.css">
   
-  <script src="../js/databaseCalls.js"></script>
+  <script src="/public/js/databaseCalls.js"></script>
 </head>
 <body>
-  <form>
-    <fieldset>
-      <legend>Add a Workout</legend>
-      <label for="name" id="exercise">Exercise Name:</label>
-      <input type="text" name="name" id="name" required>
-      
-      <label for="reps">Repetitions:</label>
-      <input type="number" name="reps" id="reps" required> 
 
-      <label for="weight">Weight:</label>
-      <input type="number" name="weight" id="weight" required> 
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <form>
+        <fieldset>
+          <legend>Add a Workout</legend>
+          <label for="name" id="exercise">Exercise Name:</label>
+          <input type="text" name="name" id="name" required>
 
-      <label for="date">Date:</label>
-      <input type="date" name="date" id="date" required>
+          <label for="reps">Repetitions:</label>
+          <input type="number" name="reps" id="reps" required> 
 
-    <label for="unit">Unit:</label>
-      <input type="radio" name="unit" id="unit" value="lbs" />Pounds
-      <input type="radio" name="unit" id="unit" value="kilos" />Kilograms
+          <label for="weight">Weight:</label>
+          <input type="number" name="weight" id="weight" required> 
 
-      <input type="submit" id="newWorkout">
-    </fieldset>
+          <label for="date">Date:</label>
+          <input type="date" name="date" id="date" required>
+
+          <label for="unit">Unit:</label>
+          <input type="radio" name="unit" id="unit" value="lbs" />Pounds
+          <input type="radio" name="unit" id="unit" value="kilos" />Kilograms
+
+          <input type="submit" id="newWorkout">
+      </fieldset>
   </form>
-    <div class="table-responsive">
-        
-      <table id="workouts" class="table">
-        <caption>Your Workouts</caption>
-        <tr>
-          <th class="idTitle">Id</th>
-          <th>Exercise</th>
-          <th>Repetitions</th>
-          <th>Weight</th>
-          <th>Date</th>
-          <th>Unit</th>
-        </tr>
-      </table>
-    </div>
+</div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-body">
+   <div class="table-responsive">
+
+    <table id="workouts" class="table">
+      <caption>Your Workouts</caption>
+      <tr>
+        <th class="idTitle">Id</th>
+        <th>Exercise</th>
+        <th>Repetitions</th>
+        <th>Weight</th>
+        <th>Date</th>
+        <th>Unit</th>
+    </tr>
+</table>
+</div>
+</div>
+</div>
+
+
+
 
 </body>
 </html>
