--- a/sub/public/html/workouts.html
+++ b/sub/public/html/workouts.html
@@ -1,4 +1,14 @@
+<!--
 
+// CS 290 -
+// Carol D Toro
+// toroc@oregonstate.edu
+// Winter 2016
+// Assignment: Database Interactions & UI
+// Filename: workouts.html
+// URL: http://52.33.44.25:3001/public/html/workouts.html
+//
+-->
 <!-- Client Side static page -->
 
 <!DOCTYPE html>
@@ -10,7 +20,7 @@
   <link rel="stylesheet" href="/public/css/style.css" type="text/css">
   <!--boot strap sheet-->
   <link rel="stylesheet" href="/public/css/lavish-bootstrap.css">
-  
+
   <script src="/public/js/databaseCalls.js"></script>
 </head>
 <body>
@@ -24,10 +34,10 @@
           <input type="text" name="name" id="name" required>
 
           <label for="reps">Repetitions:</label>
-          <input type="number" name="reps" id="reps" required> 
+          <input type="number" name="reps" id="reps" required>
 
           <label for="weight">Weight:</label>
-          <input type="number" name="weight" id="weight" required> 
+          <input type="number" name="weight" id="weight" required>
 
           <label for="date">Date:</label>
           <input type="date" name="date" id="date" required>
