Forgot to add value to submit button

--- a/sub/public/html/workouts.html
+++ b/sub/public/html/workouts.html
@@ -46,7 +46,7 @@
           <input type="radio" name="unit" id="unit" value="lbs" />Pounds
           <input type="radio" name="unit" id="unit" value="kilos" />Kilograms
 
-          <input type="submit" id="newWorkout">
+          <input type="submit" id="newWorkout" value="Submit">
       </fieldset>
   </form>
 </div>
